# school-app

./: .gitignore  main.py  pyproject.toml
school_app/: db.sqlite3  load_fixtures.sh  manage.py
school_app/accounts/: admin.py  models.py
school_app/accounts/migrations/: 0001_initial.py
school_app/announcements/: forms.py  models.py  views.py
school_app/announcements/fixtures/: announcements.json  groups.json  users.json
school_app/announcements/migrations/: 0001_initial.py  0002_remove_announcement_author.py  0003_announcement_author.py  0004_announcement_title.py  0005_announcement_exp_date_alter_announcement_pub_date.py  0006_alter_announcementcomment_announcement_and_more.py  0007_alter_announcement_groups.py
school_app/announcements/templates/: announcement.html  announcement_edit_form.html  announcement_form.html  announcements_page.html
school_app/events/: admin.py  forms.py  models.py  views.py
school_app/events/migrations/: 0001_initial.py  0002_event_event_description.py
school_app/events/templates/: calendar.html
school_app/fixtures/: announcements.json  events.json  eventstatuses.json  eventtypes.json  groupprofiles.json  messages.json  messagethreads.json  userprofiles.json  users.json
school_app/groups/: admin.py  apps.py  forms.py  models.py  views.py
school_app/landing/: forms.py  models.py  views.py
school_app/media/: admin.py  media.py  models.py  views.py
school_app/messages/: apps.py  forms.py  models.py  views.py
school_app/school_app/: asgi.py  settings.py  urls.py  wsgi.py
school_app/templates/: base.html
(+27 files in other folders)
